--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -136,6 +136,15 @@ body {
 
   article {
     clear: left;
+    div.thumbnail {
+      width: 200px;
+      float: right;
+      p {
+        margin: 0;
+        padding: 0;
+        font-size: small;
+      }
+    }
   }
 
   position: relative;
